--- a/main.Rmd
+++ b/main.Rmd
@@ -27,7 +27,11 @@ A megfelelő pénzügyi nevelésnek magában kell foglalnia a képességet, hogy
 Az elégtelen edukáció, a hiányos pénzügyi szocializáció olyan viselkedésjegyekhez vezet mint a státuszszimbólumok vezette költekezés, a rövid távú költések, bármilyen gátlás hiánya, impulziv vásárlás, hirtelen, mindeféle körültekintést vagy információszerzést nélkülöző, vagy külső jegyek, megjelenés vezette költekezés [@White2019].
 A megfelelő pénzügyi edukáció végső célja a financiális intelligencia, az informáltság alapján vezetett döntési és mérlegelési képesség kialakulása, mely annak felismerését is jelenti, mikor szükséges tanács kérése, vagy támogatás, és ezáltal hozzájárul a jóllét kialakulásához.
 A pénzügyi "olvasottság" azt is jelenti, a megfelelően kiválogatott, a döntés szempontjából releváns információ alapján tud mérlegelni a személy, és felismeri a végkimenetel teljes anyagi vonzatát.
+
 5-6 éves gyerekeken végzett kutatásában [@Wahyuni2023] a pénzügyi ismeretek jelentős javulását érték el Simon Nicholson un. "Loose Parts Play" paradigmáját követve, mely a gyermekek tanulásában a játék során kitöltött, "üres terek" koncepióját használja.
+A korai szokások későbbi életvitelre, éleminőségre, és esetünkben a majdani család financiális biztonságára és egészségére gyakorolt hatása miatt a szerzők különösen fontosnak tartják a pénzügyi edukációt, illetve az oktatási rendszer, oktatói személyzet erre vonatkozó felkészültségét és nyitottságát.
+
+- miben lehet hatékony az oktatás
 
 **Összefoglalás**
 
