--- a/behav.bib
+++ b/behav.bib
@@ -38,3 +38,18 @@
   month     = sep,
   doi       = {10.4324/9780429469435},
 }
+
+ 
+@Article{Xie2023,
+  author    = {Xie, Xiaohong and Osińska, Magdalena and Szczepaniak, Małgorzata},
+  journal   = {Journal of Policy Modeling},
+  title     = {Do young generations save for retirement? Ensuring financial security of Gen Z and Gen Y},
+  year      = {2023},
+  issn      = {0161-8938},
+  month     = may,
+  number    = {3},
+  pages     = {644--668},
+  volume    = {45},
+  doi       = {10.1016/j.jpolmod.2023.05.003},
+  publisher = {Elsevier BV},
+}
