--- a/main.Rmd
+++ b/main.Rmd
@@ -31,7 +31,9 @@ A pénzügyi "olvasottság" azt is jelenti, a megfelelően kiválogatott, a dön
 5-6 éves gyerekeken végzett kutatásában [@Wahyuni2023] a pénzügyi ismeretek jelentős javulását érték el Simon Nicholson un. "Loose Parts Play" paradigmáját követve, mely a gyermekek tanulásában a játék során kitöltött, "üres terek" koncepióját használja.
 A korai szokások későbbi életvitelre, éleminőségre, és esetünkben a majdani család financiális biztonságára és egészségére gyakorolt hatása miatt a szerzők különösen fontosnak tartják a pénzügyi edukációt, illetve az oktatási rendszer, oktatói személyzet erre vonatkozó felkészültségét és nyitottságát.
 
-- miben lehet hatékony az oktatás
+- negativ hatasok, miert igazan lenyeges
+- miben lehet hatékony az oktatás https://www.sciencedirect.com/science/article/abs/pii/S0304387822000426
+
 
 **Összefoglalás**
 
