--- a/behav.bib
+++ b/behav.bib
@@ -53,3 +53,44 @@
   doi       = {10.1016/j.jpolmod.2023.05.003},
   publisher = {Elsevier BV},
 }
+
+ 
+@Article{Kaiser2022,
+  author    = {Kaiser, Tim and Menkhoff, Lukas},
+  journal   = {Journal of Development Economics},
+  title     = {Active learning improves financial education: Experimental evidence from Uganda},
+  year      = {2022},
+  issn      = {0304-3878},
+  month     = jun,
+  pages     = {102870},
+  volume    = {157},
+  doi       = {10.1016/j.jdeveco.2022.102870},
+  publisher = {Elsevier BV},
+}
+
+ 
+@Article{Agasisti2023,
+  author    = {Agasisti, Tommaso and Barucci, Emilio and Cannistrà, Marta and Marazzina, Daniele and Soncin, Mara},
+  journal   = {Evaluation and Program Planning},
+  title     = {Online or on-campus? Analysing the effects of financial education on student knowledge gain},
+  year      = {2023},
+  issn      = {0149-7189},
+  month     = jun,
+  pages     = {102273},
+  volume    = {98},
+  doi       = {10.1016/j.evalprogplan.2023.102273},
+  publisher = {Elsevier BV},
+}
+
+ 
+@Article{Hassan2024,
+  author    = {Hassan, Syahida and Ahmad, Rahayu and Katuk, Norliza and Ghazali, Norhasyimatul Naquiah and Aripin, Jazzanul Azriq and Ali, Fahimi},
+  journal   = {Procedia Computer Science},
+  title     = {Staying One Step Ahead: Exploring Protection Motivation Theory to Combat Cyber-fraud Among E-services Users.},
+  year      = {2024},
+  issn      = {1877-0509},
+  pages     = {1364--1371},
+  volume    = {234},
+  doi       = {10.1016/j.procs.2024.04.011},
+  publisher = {Elsevier BV},
+}
